<resources>
    <string name="app_name">LeadMeLabs</string>
    <string name="logo">Logo</string>
    <string name="scene_icon">Scene Icon</string>
    <string name="title_scenes">Zones and Scenes</string>
    <string name="restart_session">RESTART SESSION</string>
    <string name="end_session">END SESSION</string>
    <string name="new_session">NEW SESSION</string>
    <string name="white_underline">White underscore line</string>
    <string name="session_button">session_button</string>
    <string name="dashboard_button">dashboard_button</string>
    <string name="navigation_button_settings">navigation_button_settings</string>
    <string name="controls_button">controls_button</string>
    <string name="appliance_default_title">Appliance Default Title</string>
    <string name="lights">Lights</string>
    <string name="blinds">Blinds</string>
    <string name="projectors">Projectors</string>
    <string name="computers">Computers</string>
    <string name="led_rings">LED Rings</string>
    <string name="led_walls">LED Walls</string>
    <string name="source">Source</string>
    <string name="shutdown">Shutdown</string>
    <string name="launch_url">Launch URL</string>
    <string name="scenes">Scenes</string>
    <string name="dashboard">Dashboard</string>
    <string name="vr_library">VR Library</string>
    <string name="room_controls">Room Controls</string>
    <string name="settings">Settings</string>
    <string name="launching_game">Launching Experience</string>
    <string name="dismiss">Dismiss</string>
    <string name="_continue">Continue</string>
    <string name="shutting_down">Shutting Down</string>
    <string name="cancel_shutdown">Cancel shutdown?</string>
    <string name="invalid_url">Invalid URL. Please check and try again.</string>
    <string name="cancel_10">Cancel (10)</string>
    <string name="exit_theatre">Exit theatre mode?</string>
    <string name="exit_current_theatre_mode">\" is currently in theatre mode. Are you sure you want to exit theatre mode?\"</string>
    <string name="game_not_installed">Experience not installed</string>
    <string name="ending_session">Ending session</string>
    <string name="room_controls_title">ROOM CONTROLS</string>
    <string name="vr_library_title">VR LIBRARY</string>
    <string name="settings_title">SETTINGS</string>
    <string name="select_stations_title">SELECT STATIONS</string>
    <string name="manage_station_title">MANAGE STATION</string>
    <string name="room_type_placeholder">Room Type</string>
    <string name="no_stations_available">There are no stations available in selected room.</string>
    <string name="room_all">All</string>
    <string name="title_placeholder">Title</string>
    <string name="content_text_placeholder">Content Text</string>
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>
    <string name="search">Search</string>
    <string name="pick_an_experience">Pick an experience to play in VR</string>
    <string name="not_installed_on_stations">This application is not installed on some stations!</string>
    <string name="contact_it_department">Please contact your IT department for install instructions.</string>
    <string name="alert_icon">Alert Icon</string>
    <string name="vr_status_icon">vr status icon</string>
    <string name="restarting_system">Restarting system</string>
    <string name="select_stations">Select stations</string>
    <string name="end_session_on">Which stations would you like to end the session on?</string>
    <string name="refresh">Refresh</string>
    <string name="experience_preview">experience preview</string>
    <string name="icon_volume">volume icon</string>
    <string name="individually_control_a_station">Individually control a station.</string>
    <string name="current_session">Current Session</string>
    <string name="choose_new">Choose new</string>
    <string name="alert_area">Alert area</string>
    <string name="station_status_title">Station Status:</string>
    <string name="end_session_lower">End Session</string>
    <string name="launch_website_lower">Launch Website</string>
    <string name="restart_vr_system">Restart VR System</string>
    <string name="restart_session_lower">Restart Session</string>
    <string name="identify_station_lower">Identify Station</string>
    <string name="reconnect">Reconnect</string>
    <string name="lost_server_message_content">Check power and reconnect. If this problem persists, please contact your IT department.</string>
    <string name="lost_server_connection">Lost server connection!</string>
    <string name="close">Close</string>
    <string name="room_icon">Room icon</string>
    <string name="switch_room">Switch Room</string>
    <string name="vern_lost_the_server">vern lost the server</string>
    <string name="vern_out_of_charge">Vern out of charge</string>
    <string name="set_nuc_address">Set NUC IP address</string>
    <string name="how_to_use_leadme_labs">How to use LeadMe Labs</string>
    <string name="set_pin_code">Set PIN code</string>
    <string name="set_encryption_key">Set encryption key</string>
    <string name="set_lab_location">Set lab location</string>
    <string name="set_license_key">Set license key</string>
    <string name="hide_station_controls">Hide station controls</string>
    <string name="allow_analytics">Allow analytics</string>
    <string name="all_computers_off">All stations in this room are currently turned off.</string>
    <string name="reconnection_failed">Reconnection attempt failed. Try again or contact your IT department.</string>
    <string name="oh_no">Oh no!</string>
    <string name="shut_down_space">Shut Down</string>
    <string name="shut_down_stations">Shut down stations</string>
    <string name="shut_down_station">Shut Down Station</string>
    <string name="vern_warning">vern warning</string>
    <string name="vern_happy">vern happy</string>
    <string name="update_available">Update available</string>
    <string name="update_message">There is an update available on the Google Play Store. Please contact your IT department to install it.</string>
    <string name="ignore">Ignore</string>
    <string name="save">Save</string>
    <string name="station_name_warning">Station name can only contains letters, numbers and spaces</string>
    <string name="additional_exit_prompts">Additional exit prompts</string>
    <string name="room_lock">Room lock</string>
    <string name="cancel_shut_down">Cancel shut down</string>
    <string name="developer_traffic">Developer traffic</string>
    <string name="internal_traffic">Internal traffic</string>
    <string name="set_nuc_mac_address">Set NUC MAC address</string>
    <string name="confirm">Confirm</string>
    <string name="no_rooms">There are currently no rooms. Please check that the NUC is connected.</string>
    <string name="one_room">There is only one room available. Lock will not affect anything.</string>
    <string name="control_experience">Control Experience</string>
    <string name="new_session_lower">New Session</string>
</resources>