<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View"/>
        <import type="com.lumination.leadmelabs.ui.sidemenu.SideMenuViewModel" />
        <variable
            name="sideMenu"
            type="com.lumination.leadmelabs.ui.sidemenu.SideMenuViewModel" />

        <import type="com.lumination.leadmelabs.MainActivity"/>
        <variable
            name="main"
            type="com.lumination.leadmelabs.MainActivity" />

        <import type="com.lumination.leadmelabs.ui.settings.SettingsViewModel"/>
        <variable
            name="settings"
            type="com.lumination.leadmelabs.ui.settings.SettingsViewModel" />
    </data>

    <com.google.android.flexbox.FlexboxLayout
        android:id="@+id/side_menu_fragment"
        style="@style/SideMenuContainer"
        android:layout_width="200dp"
        android:paddingHorizontal="45dp"
        android:paddingVertical="30dp"
        app:flexDirection="column"
        app:justifyContent="space_between">

        <com.google.android.flexbox.FlexboxLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:flexDirection="column"
            app:alignItems="center">

            <com.google.android.flexbox.FlexboxLayout
                style="@style/SideMenuIcon"
                android:id="@+id/dashboard_button"
                android:background="@{sideMenu.selectedIcon.equals(`dashboard`) ? @drawable/bg_menu_selected : @drawable/bg_none}">

                <ImageView
                    style="@style/SideMenuImage"
                    android:contentDescription="@string/dashboard_button"
                    android:src="@drawable/icon_home" />

                <TextView
                    style="@style/SideMenuLabel"
                    android:visibility="@{sideMenu.selectedIcon.equals(`controls`) ? View.GONE : View.VISIBLE}"
                    android:text="@string/dashboard"/>
            </com.google.android.flexbox.FlexboxLayout>

            <com.google.android.flexbox.FlexboxLayout
                style="@style/SideMenuIcon"
                android:id="@+id/session_button"
                android:background="@{sideMenu.selectedIcon.equals(`session`) ? @drawable/bg_menu_selected : @drawable/bg_none}">

                <ImageView
                    style="@style/SideMenuImage"
                    android:src="@drawable/icon_vr_white"
                    android:contentDescription="@string/session_button" />

                <TextView
                    style="@style/SideMenuLabel"
                    android:visibility="@{sideMenu.selectedIcon.equals(`controls`) ? View.GONE : View.VISIBLE}"
                    android:text="@string/vr_library"/>
            </com.google.android.flexbox.FlexboxLayout>

            <com.google.android.flexbox.FlexboxLayout
                style="@style/SideMenuIcon"
                android:id="@+id/controls_button"
                android:background="@{sideMenu.selectedIcon.equals(`controls`) ? @drawable/bg_menu_selected : @drawable/bg_none}">

                <ImageView
                    style="@style/SideMenuImage"
                    android:src="@{sideMenu.selectedIcon.equals(`controls`) ? @drawable/icon_controls_light_blue : @drawable/icon_controls}"
                    android:contentDescription="@string/controls_button" />

                <TextView
                    style="@style/SideMenuLabel"
                    android:visibility="@{sideMenu.selectedIcon.equals(`controls`) ? View.GONE : View.VISIBLE}"
                    android:text="@string/room_controls"/>
            </com.google.android.flexbox.FlexboxLayout>

            <com.google.android.flexbox.FlexboxLayout
                style="@style/SideMenuIcon"
                android:paddingTop="0dp"
                android:id="@+id/settings_button"
                android:background="@{sideMenu.selectedIcon.equals(`settings`) ? @drawable/bg_menu_selected : @drawable/bg_none}">

                <ImageView
                    style="@style/SideMenuImage"
                    android:src="@drawable/icon_settings"
                    android:layout_marginTop="-10dp"
                    android:contentDescription="@string/navigation_button_settings" />

                <TextView
                    style="@style/SideMenuLabel"
                    android:layout_marginTop="-5dp"
                    android:visibility="@{sideMenu.selectedIcon.equals(`controls`) ? View.GONE : View.VISIBLE}"
                    android:text="@string/settings"/>
            </com.google.android.flexbox.FlexboxLayout>

        </com.google.android.flexbox.FlexboxLayout>

        <com.google.android.flexbox.FlexboxLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_flexShrink="0"
            app:justifyContent="flex_end"
            app:alignItems="center"
            app:flexDirection="column">
            <ImageView
                android:id="@+id/back_button"
                android:layout_width="45dp"
                android:layout_height="wrap_content"
                android:contentDescription="@string/dashboard_button"
                android:src="@drawable/icon_back"
                android:visibility="@{main.fragmentCount > 1 ? View.VISIBLE : View.INVISIBLE}"/>
        </com.google.android.flexbox.FlexboxLayout>
    </com.google.android.flexbox.FlexboxLayout>
</layout>