<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <import type="com.lumination.leadmelabs.models.Station" />
        <import type="android.view.View"/>
        <variable
            name="station"
            type="com.lumination.leadmelabs.models.Station" />
    </data>

    <RelativeLayout
        android:layout_width="178dp"
        android:layout_height="178dp">

        <RelativeLayout
            android:id="@+id/station_card_alert"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:translationZ="5dp"
            android:layout_marginStart="144dp"
            android:layout_marginTop="6dp">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/icon_alert"
                android:contentDescription="@string/alert_icon" />
        </RelativeLayout>

        <com.google.android.flexbox.FlexboxLayout
            android:id="@+id/station_card"
            style="@style/StationCard"
            android:background="@{station.selected ? @drawable/card_ripple_white_blue_border : @drawable/card_ripple_white}"
            android:clickable="true"
            android:focusable="true"
            android:orientation="vertical"
            app:justifyContent="space_between">

            <com.google.android.flexbox.FlexboxLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:flexDirection="column">

                <ImageView
                    android:id="@+id/station_vr_icon"
                    android:layout_width="52dp"
                    android:layout_height="28dp"
                    android:layout_marginTop="10dp"
                    android:contentDescription="@string/vr_status_icon"
                    android:minWidth="52dp"
                    android:minHeight="28dp"
                    android:src="@{station.status.equals(`Off`) ? @drawable/icon_vr_gray : @drawable/icon_vr, default=@drawable/bg_station_card_grey}" />
            </com.google.android.flexbox.FlexboxLayout>

            <com.google.android.flexbox.FlexboxLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:flexDirection="column">

                <TextView
                    android:id="@+id/card_info_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:drawablePadding="3dp"
                    android:gravity="center"
                    android:text="@string/game_not_installed"
                    android:textColor="@color/orange"
                    android:textSize="9sp"
                    android:visibility="gone"
                    app:drawableLeftCompat="@drawable/icon_alert"
                    tools:ignore="SmallSp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{station.name, default=Name}"
                    android:textColor="@color/black"
                    android:textFontWeight="600"
                    android:textSize="11sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{station.status, default=`Off`}"
                    android:textSize="13sp"
                    android:visibility="@{(station.gameName.equals(`null`) || station.gameName == null || station.gameName.equals(``)) || station.status.equals(`Not Responding`) || station.status.equals(`Off`) ? View.VISIBLE : View.GONE}" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{station.gameName}"
                    android:textSize="11sp"
                    android:visibility="@{station.gameName != null &amp;&amp; !station.gameName.equals(``) &amp;&amp; !station.gameName.equals(`null`) ? View.VISIBLE : View.GONE}" />
            </com.google.android.flexbox.FlexboxLayout>
        </com.google.android.flexbox.FlexboxLayout>
    </RelativeLayout>
</layout>